tests/expected/recovery/expressions/004_nested_paren_break.txt
{
  "type": "Program",
  "start": 0,
  "end": 103,
  "sourceType": "script",
  "hashbang": null,
  "body": [
    {
      "type": "VariableDeclaration",
      "start": 48,
      "end": 72,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 54,
          "end": 71,
          "id": {
            "type": "Identifier",
            "start": 54,
            "end": 60,
            "name": "broken"          },
          "init": null        }
      ]    },
    {
      "type": "VariableDeclaration",
      "start": 73,
      "end": 102,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 79,
          "end": 101,
          "id": {
            "type": "Identifier",
            "start": 79,
            "end": 97,
            "name": "anchor_after_error"          },
          "init": {
            "type": "Literal",
            "start": 100,
            "end": 101,
            "value": 1,
            "raw": "1"          }        }
      ]    }
  ],
  "comments": [
    {
      "type": "Line",
      "start": 0,
      "end": 47,
      "value": " Nested parenthesized expression stops early."
    }
  ],
  "errors": [
    {
      "code": "K2002",
      "severity": "error",
      "message": "Expected ')', got ';'",
      "line": 2,
      "column": 24,
      "offset": 71
    },
    {
      "code": "K2020",
      "severity": "error",
      "message": "Expected initializer expression after '='",
      "line": 2,
      "column": 24,
      "offset": 71
    },
    {
      "code": "K2070",
      "severity": "error",
      "message": "Missing initializer in 'const' declaration",
      "line": 3,
      "column": 1,
      "offset": 73
    }
  ]
}
error[K2002]: Expected ')', got ';'
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/expressions/004_nested_paren_break.js:2:24
   |
 2 | const broken = ((1 + 2);
   |                        ^
  = note: see TS1005

error[K2020]: Expected initializer expression after '='
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/expressions/004_nested_paren_break.js:2:24
   |
 2 | const broken = ((1 + 2);
   |                        ^
  = note: see TS1109

error[K2070]: Missing initializer in 'const' declaration
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/expressions/004_nested_paren_break.js:3:1
   |
 3 | const anchor_after_error = 1;
   | ^^^^^

--- Statistics ---
Arena: used=37760B reserved=16777216B ratio=0%
Parse errors: 3
